# dls-slurmjob

./: .gitlab-ci.yml  README.md  index.html  make_switcher.py  pyproject.toml  switcher.json
.dae-devops/: Makefile  prepare_git_dependencies.sh  project.yaml
.dae-devops/docs/: conventions.rst  developing.rst  devops.rst  docs_structure.rst  documenting.rst  installing.rst  testing.rst
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.rst  dependabot.yml
.github/actions/install_requirements/: action.yml
.github/workflows/: code.yml  docs.yml  docs_clean.yml  linkcheck.yml
1.0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.0.2/.doctrees/: environment.pickle
1.0.2/.doctrees/explanations/: docs_structure.doctree  slurm_openapi.doctree
1.0.2/.doctrees/how-to/: testing.doctree
1.0.2/.doctrees/reference/: classes.doctree  command_line.doctree  modules.doctree
1.0.2/_modules/: index.html
1.0.2/_modules/dls_slurmjob_lib/: version.html
1.0.2/_sources/explanations/: docs_structure.rst.txt
1.0.2/_sources/how-to/: documenting.rst.txt
1.0.2/_sources/tutorials/: index.rst.txt
1.0.2/explanations/: conventions.html  docs_structure.html  index.html  slurm_openapi.html  todo.html
1.0.2/how-to/: developing.html  devops.html  documenting.html  index.html  installing.html  testing.html
1.0.2/reference/: classes.html  command_line.html  index.html  modules.html
1.0.2/tutorials/: index.html  tbd.html
1.0.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.0.3/.doctrees/: environment.pickle  index.doctree
1.0.3/.doctrees/explanations/: slurm_examples.doctree
1.0.3/.doctrees/how-to/: documenting.doctree  installing.doctree
1.0.3/.doctrees/reference/: command_line.doctree
1.0.3/.doctrees/tutorials/: index.doctree  tbd.doctree
1.0.3/_modules/: index.html
1.0.3/_modules/dls_slurmjob_lib/: version.html
1.0.3/_sources/explanations/: slurm_examples.rst.txt  todo.rst.txt  (+1 more)
1.0.3/explanations/: conventions.html  docs_structure.html  index.html  slurm_examples.html  slurm_openapi.html  todo.html
1.0.3/how-to/: developing.html  devops.html  documenting.html  index.html  installing.html  testing.html
1.0.3/reference/: classes.html  command_line.html  index.html  modules.html
1.0.3/tutorials/: index.html  tbd.html
docs/: conf.py  index.rst
docs/explanations/: conventions.rst  index.rst  slurm_openapi.rst
docs/how-to/: installing.rst
docs/reference/: command_line.rst  modules.rst
docs/tutorials/: tbd.rst
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle
main/_modules/: index.html
main/_static/: documentation_options.js
main/explanations/: conventions.html  docs_structure.html  index.html  slurm_examples.html  slurm_openapi.html  todo.html
main/how-to/: developing.html  devops.html  documenting.html  index.html  installing.html  testing.html
main/reference/: classes.html  command_line.html  index.html  modules.html
main/tutorials/: index.html  tbd.html
src/dls_slurmjob_api/: aiohttp_client.py  constants.py  exceptions.py
src/dls_slurmjob_cli/: __init__.py  main.py  version.py
src/dls_slurmjob_lib/: __init__.py  __main__.py  envvar.py  version.py
tests/: base_tester.py  conftest.py  test_cli.py
tests/configurations/: dummy.yaml
tests/scripts/: hello1.json  hello2.json  hello_bxflow.json  hello_bxflow.sh  mib_convert1.json  mib_convert1.sh
(+35 files in other folders)
